  try basic authentication if enabled. (Ralf Schlatterbeck)
- Fix xmlrpc permissions for lookup method: Allow if the key attribute
  is either searchable or viewable, don't check id attribute (Ralf
  Schlatterbeck)
- Fix installation documentation (section Prerequisites) to require at
  least python 2.5, thanks to John P. Rouillard for discovering this.
  (committed by Ralf Schlatterbeck)
- Fixing the download button re-activating the cheeseshop plugin in the 
  sphinx config. Thanks to Richard for the hint. (Bernhard Reiter)
- issue2550783 devel template's schema.py permissions referenced the
  organization property for the user, but the property is called
  organisation. Thanks to Pradip Caulagi. (committed by John Rouillard)
- issue2550749 - the xmlrpc interface is invoked on content type
  and not url path. Sending any text/xml data to roundup results in
  invoking the xml-rpc interface, but a REST or other interface could
  also consume xml data and do something different. So require the use
  of 'http(s)://.../xmlrpc' uri to trigger the xmlrpc interface.
  (John Rouillard)

2012-05-15: 1.4.20

Features:

- Experimental support for the new Chameleon templating engine.
  We now have two configurable templating engines, the old Zope TAL
  templates (called zopetal in the config) and the new Chameleon (called
  chameleon in the config). A new config-option "template_engine" under
  [main] can take these config-options, the default is zopetal.
  Thanks to Cheer Xiao for the idea of making this configurable *and*
  for the actual implementation! (Ralf)
  WARNING: Chameleon support is highly experimental and *not* recommended for
  production use. It has known performance issues and i18n is not yet
  functioning. It's still under active development. Only use this feature if
  you want to experiment with Chameleon and/or help with Roundup
  developement. If you found a bug in Chameleon support, please report after